--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 <app-root></app-root>
 
 
-<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+<!--<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>-->
 <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
 </html>
